--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tarsius-ui",
+  "author": "Muhammad Hasan",
   "description": "Responsive, Mobile-First, Front-End Frameworks for Angular-Based App on Lussa Team",
   "version": "0.0.1",
   "homepage": "http://git.lussa.net/tarsius/tarsius-ui",
@@ -19,5 +20,11 @@
     "node": ">=0.10.1"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
