--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
   "version": "0.0.1",
   "homepage": "http://git.lussa.net/tarsius/tarsius-ui",
   "license": "MIT",
-  "moduleType": "globals",
   "main": [
     "less/main.less",
     "dist/js/tarsius-ui.js"
@@ -13,21 +12,30 @@
     "/.*",
     "_config.yml",
     "docs",
-    "test"
+    "test",
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "tests"
   ],
   "dependencies": {
-    "jquery": ">=1.7.0",
-    "jquery-easing-original": "1.3.2",
-    "jquery-hoverIntent": "~1.8.1",
-    "jquery-cycle2": "~2.1.6",
-    "jquery-zoom": "~1.7.13",
-    "angular": "~1.3.15",
-    "angular-animate": "~1.3.15",
-    "angular-sanitize": "~1.3.15",
-    "underscore": "~1.8.2",
-    "underscore.string": "~3.0.3",
-    "string": "~3.0.0",
-    "angular-touch": "~1.3.15",
-    "moment": "~2.10.2"
-  }
+    "panelsnap": "~0.14.0",
+    "unsemantic": "~1.0.1"
+  },
+  "authors": [
+    "muhammad hasan <hasan@lussa.net>"
+  ],
+  "keywords": [
+    "responsive",
+    "Mobile-first",
+    "ui",
+    "front-end",
+    "frameworks",
+    "angular",
+    "jquery",
+    "tarsius",
+    "web",
+    "css",
+    "less"
+  ]
 }
