--- a/package.json
+++ b/package.json
@@ -30,5 +30,35 @@
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jekyll": "^0.4.2"
-  }
+  },
+  "main": "Gruntfile.js",
+  "directories": {
+    "doc": "docs",
+    "test": "test"
+  },
+  "dependencies": {
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-jekyll": "^0.4.2",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-csslint": "^0.4.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-cssmin": "^0.12.3",
+    "grunt-contrib-uglify": "^0.9.1"
+  },
+  "keywords": [
+    "responsive",
+    "mobile-first",
+    "ui",
+    "front-end",
+    "frameworks",
+    "angular",
+    "jquery",
+    "tarsius",
+    "web",
+    "css",
+    "less"
+  ]
 }
