--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,14 +19,25 @@ test-job:
     tags:
         - local
 
-deploy-job:
+deploy-development-job:
+    script:
+        - grunt docs
+    stage: deploy
+    except:
+        - master
+    tags:
+        - local
+
+deploy-production-job:
     script:
         - grunt docs
         - cd ./docs/_site
         - zip -r artifact.zip ./*
-        - rm -R /var/www/assul/www/ui.lussa.net/*
-        - mv artifact.zip /var/www/assul/www/ui.lussa.net/
-        - unzip /var/www/assul/www/ui.lussa.net/artifact.zip
+        - sudo rm -R /var/www/assul/www/ui.lussa.net/*
+        - sudo mv artifact.zip /var/www/assul/www/ui.lussa.net/
+        - sudo unzip /var/www/assul/www/ui.lussa.net/artifact.zip
     stage: deploy
+    only:
+        - master
     tags:
         - local
