--- a/bower.json
+++ b/bower.json
@@ -1,46 +1,49 @@
 {
-  "name": "lussa-ui",
-  "description": "Responsive, Mobile-First, Front-End Frameworks for Angular-Based App on Lussa Team",
-  "version": "0.0.1",
-  "homepage": "http://git.lussa.net/tarsius/lussa-ui",
-  "license": "MIT",
-  "main": [
-    "dist/js/lussa-ui.min.js"
-  ],
-  "ignore": [
-    "/.*",
-    "_config.yml",
-    "docs",
-    "test",
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "tests"
-  ],
-  "dependencies": {
-    "jquery": ">=1.7.0",
-    "jquery-easing-original": "1.3.2",
-    "jquery-hoverIntent": "~1.8.1",
-    "underscore": "~1.8.2",
-    "angular": "~1.4.8",
-    "angular-animate": "~1.4.8",
-    "angular-sanitize": "~1.4.8",
-    "underscore.string": "~3.0.3"
-  },
-  "authors": [
-    "muhammad hasan <hasan@lussa.net>"
-  ],
-  "keywords": [
-    "responsive",
-    "Mobile-first",
-    "ui",
-    "front-end",
-    "frameworks",
-    "angular",
-    "jquery",
-    "tarsius",
-    "web",
-    "css",
-    "less"
-  ]
+    "name": "lussa-ui",
+    "description": "Responsive, Mobile-First, Front-End Frameworks for Angular-Based App on Lussa Team",
+    "version": "0.0.1",
+    "homepage": "http://git.lussa.net/tarsius/lussa-ui",
+    "license": "MIT",
+    "main": [
+        "dist/js/lussa-ui.min.js"
+    ],
+    "ignore": [
+        "/.*",
+        "_config.yml",
+        "docs",
+        "test",
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "tests"
+    ],
+    "dependencies": {
+        "jquery": "~1.7.0",
+        "jquery-easing-original": "1.3.2",
+        "jquery-hoverIntent": "~1.8.1",
+        "underscore": "~1.8.2",
+        "angular": "~1.4.8",
+        "angular-animate": "~1.4.8",
+        "angular-sanitize": "~1.4.8",
+        "underscore.string": "~3.0.3"
+    },
+    "resolutions": {
+        "jquery": "1.7.2"
+    },
+    "authors": [
+        "muhammad hasan <hasan@lussa.net>"
+    ],
+    "keywords": [
+        "responsive",
+        "Mobile-first",
+        "ui",
+        "front-end",
+        "frameworks",
+        "angular",
+        "jquery",
+        "tarsius",
+        "web",
+        "css",
+        "less"
+    ]
 }
